2008-04-03  Ludovic Courtès  <ludo@gnu.org>

	* inline.h (SCM_C_EXTERN_INLINE): New macro, addresses the
	"extern inline" semantic change in C99 mode with GCC 4.3 and
	later and the warning in C99 mode with GCC 4.2.  Use it in the
	inline function definitions.

2008-03-10  Ludovic Courtès  <ludo@gnu.org>

	* eval.c, filesys.c: Enclose `alloca' blob in `#ifndef alloca',
	as per Gnulib's `alloca'.  This should fix compilation on
	FreeBSD 6.

2008-03-09  Neil Jerram  <neil@ossau.uklinux.net>

	* numbers.c: Only define scm_from_complex_double if it will
	actually be used.

2008-03-06  Ludovic Courtès  <ludo@gnu.org>

	* eval.c (scm_eval): If MODULE_OR_STATE is not a dynamic state,
	make sure it's a module.  Reported by David I. Lehn.

2008-03-02  Ludovic Courtès  <ludo@gnu.org>

	* pairs.h (scm_is_pair): Moved declaration to `inline.h'.
	* inline.h: Make sure `extern' declarations are not produced
	when `inline' is supported but GCC is not used.  This
	fixes "mixed linkage" errors with compilers such as
	DEC/Compaq/HP CC.

2008-02-27  Neil Jerram  <neil@ossau.uklinux.net>

	* _scm.h (errno): Remove declarations that have been there
	forever, and are known to conflict on some platforms with that
	provided by <errno.h>, which we include unconditionally.  If
	<errno.h> doesn't provide a errno declaration, what is the point
	of it?

2008-02-23  Ludovic Courtès  <ludo@gnu.org>

	* numbers.c (scm_make_rectangular): Rename argument to
	`real_part' and `imaginary_part' to work around Solaris 2.10
	headers which define `imaginary' as a macro.  Patch by Tim
	Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>.

2008-02-22  Ludovic Courtès  <ludo@gnu.org>

	* read.c (strncasecmp): Add declaration when
	`HAVE_DECL_STRNCASECMP' is undefined.  Fixes compilation on
	NetBSD 1.6.

	* gc.c (scm_ia64_ar_bsp)[linux]: Don't discard `const' qualifier
	of OPAQUE.

2008-02-21  Ludovic Courtès  <ludo@gnu.org>

	Fix bug #22369.

	* goops.c (scm_add_slot): Add `SCM_UNDEFINED' as last argument